[project]
name = "skime"
version = "0.2.1"
description = ""
readme = { file = "README", content-type = "text/plain" }
requires-python = ">=3.10,<4.0"
dependencies = []

[project.scripts]
skime = "skime.__main__:main"

[dependency-groups]
dev = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "pytest>=9.1.1",
    "pyyaml>=6.0.3",
]

[tool.uv]
required-version = "==0.11.18"

[tool.black]
target-version = ["py310"]

[tool.setuptools.package-data]
skime = ["iset.yml", "scheme/*.scm"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
