[project]
name = "skime"
version = "0.3.0"
description = "A small Scheme implementation in Python"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10,<4.0"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://github.com/aisk/skime"
Repository = "https://github.com/aisk/skime"
"Original project" = "https://github.com/pluskid/skime"

[project.scripts]
skime = "skime.__main__:main"

[dependency-groups]
dev = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "pytest>=9.1.1",
    "pyyaml>=6.0.3",
]

[tool.uv]
required-version = "==0.11.18"

[tool.black]
target-version = ["py310"]

[tool.uv.build-backend]
module-name = "skime"
module-root = ""

[build-system]
requires = ["uv_build>=0.11.18,<0.12.0"]
build-backend = "uv_build"
